# visionArti

./: .gitignore  CMakeLists.txt  CMakePresets.json  Rapport.md  Rapport_Nathan_Morel.md  Readme.md  aide.json  auto.py  compile.sh  compile_test.sh  plan_ppt.md  result.json
Helper/: Cour2.md  Cour3.md  Cour4.md  introduction.md  recap.md
Helper/pdf/Intro_OpenCV/: CMakeCache.txt  CMakeLists.txt  CMakeListsOld.txt  Makefile  cmake_install.cmake
Helper/pdf/Intro_OpenCV/src/: 11.CVEdMeanFiltering.cpp  11.EdStructures.h  3.InRange.cpp  5.DisplayVideo.cpp  7.DisplayVideoInRangeBW.cpp  8.DisplayVideoInRangeHSV.cpp  ALire.txt
Helper/pdf/SRD_S9_2023/: NewPropositiondeProgrammesVR et VPE.docx  NewTD_MM_DécCompConn2023.doc
Helper/pdf/SRD_S9_2023/NLinuxEdEnviTI/src/: Compile.sh
Helper/pdf/SRD_S9_2023/PreparationDE_CRTP/VPE_S9/: 0.CV_Vid_InRangeHSV.cpp  1.EdGradientKirsh4SepMasksThrThi.c  10.EdMotionDiff.c  11.EdLibMotionDiff.c  11.EdLibMotionDiff.h  12.EdLibMorphoMath.c  12.EdLibMorphoMath.h  2.EdLibGradientKirsh4SepMasks.c  3.EdLibThreshold.c  3.EdLibThreshold.h  4.EdLibThinning.c  4.EdLibThinning.h  6.EdGradientKirsh4GathMasksThrThi.c  7.EdLibGradientKirsh4GathMasks.c  7.EdLibGradientKirsh4GathMasks.h  8.EdRVBGradientThrThi.c  9.EdLibRVBGradientThrThi.c  9.EdLibRVBGradientThrThi.h  Compile.sh  Contenu.tex  ModuleVPE2024.docx
Helper/pdf/SRD_S9_2023/Stereo_Nouveau2024/StereoImages/: Test0002_l.pgm  Test0002_r.pgm  Test0003_l.pgm  Test0003_r.pgm
Helper/pdf/TmpEFREI_VSI2024/Intro_OpenCV/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Helper/pdf/TmpEFREI_VSI2024/Intro_OpenCV/Image/: cap2.ppm
Helper/pdf/TmpEFREI_VSI2024/Intro_OpenCV/src/: 12.DisplayVideoMeanFilteringBW.cpp  4.InRangeHSV.cpp  6.DisplayVideoBlur.cpp  9.HatThrAt.cpp  TestEdOpenCV.cpp  TestVideoEdOpenCV.cpp
Helper/pdf/TmpEFREI_VSI2024/NLinuxEdEnviTI/ImRes/: BureauTh50.pgm  LenaHeadCp.pgm  LennaBruitMoy.pgm  SecateurHTh_172_209.pgm
Helper/pdf/TmpEFREI_VSI2024/NLinuxEdEnviTI/src/: Compile.sh  EdClassicThreshold.c  EdGaussFiltering.c  EdHatThreshold.c  EdHatThresholdEros.c  EdLibClassicThreshold.c  EdLibClassicThreshold.h  EdLibGaussFiltering.c  EdLibGaussFiltering.h  EdLibHatThreshold.c  EdLibHatThreshold.h  EdLibMeanFiltering.c  EdLibMeanFiltering.h  EdLibMedianFiltering.c  EdLibMedianFiltering.h  EdLibMorphoMath.c  EdLibMorphoMath.h  EdMeanFiltering.c  EdMedianFiltering.c
Helper/pdf/TomeIII/: ALire.txt  CMakeCache.txt  CMakeLists.txt  CMakeLists1.txt  Makefile  cmake_install.cmake
Helper/pdf/TomeIII/TomeIII_Image/: LennaHeadbruitaleat.ppm
Helper/pdf/TomeIII/TomeIII_bin/: CVCannyCtrAppPoly_Priv  CVEdMeanFiltering  CVVid_DetectVisage  CVVid_InRangeHSV  ColorClassAt  DetectVisage  DisplayImage  DisplayVideo  DisplayVideoBlur  DisplayVideoInRangeBW  DisplayVideoInRangeHSV  DisplayVideoMeanFilteringBW  HatThrAt  HoughCircle  HoughLine  InRange  InRangeBlobXXX  LissagesImage
Helper/pdf/TomeIII/TomeIII_src/: CVCannyCtrAppPoly_Priv.cpp  ColorClassAt.cpp  DSCCvUtilities.cpp  DSCCvUtilities.h  DetectVisage.cpp  DisplayImage.cpp  DisplayVideo.cpp  DisplayVideoBlur.cpp  DisplayVideoInRangeHSV.cpp  EdLibMeanFiltering.cpp  HoughCircle.cpp  HoughLine.cpp  InRange.cpp  InRangeBlobXXX.cpp  LissagesImage.cpp
Helper/pdf/src/: Compile.sh  EdLibErosion.c  EdLibErosion.h  EdLibThreshold.c  EdLibThreshold.h  EdPremiersTrts.c
Helper/projet/: BoucleInfLB.c
Helper/projet/ADESFA/: TimerUnix.c
Helper/projet/CauCpp/: TestArguments.c
Helper/projet/DetectVisage/: DetectVisage1.cpp  DetectVisage1_3_4_Bench.cpp
Helper/projet/SystTR/: ThreadParam.c  ThreadStruct.c
LegoTracker/include/: lego_detection.hpp
LegoTracker/models/: trained_model.h5
LegoTracker/src/: image_processing.cpp  lego_detection.cpp  main.cpp  utils.cpp
LegoTracker/tests/: main.cpp  test_detection.cpp  test_processing.cpp
Tp/EFREI_IRV_VAAS/: NoteRevision.md  PrésentationProjetsEFREI_SRD_2025.ppt
Tp/EFREI_IRV_VAAS/TPContour/: Note.md  TP Détection de contours.docx
Tp/EFREI_IRV_VAAS/TPContour/NewAdonner_GradKThrThi_Sep/ImRes/: BureauNorm.pgm  Bureau_norm.pgm  Bureau_pts.pgm  Bureauts.pgm  Lenna_norm.pgm  Lenna_pts.pgm  PavinRealNBNorm.pgm  PavinRealNBPts.pgm
Tp/EFREI_IRV_VAAS/TPContour/NewAdonner_GradKThrThi_Sep/src/: Compile.sh  DetectionContours.c  EdGradientKirsh4SepMasksThrThi  EdGradientKirsh4SepMasksThrThi.c  EdLibEdgeUtilities.c  EdLibEdgeUtilities.h  EdLibGradientKirsh4SepMasks.c  EdLibGradientKirsh4SepMasks.h  EdLibThinning.c  EdLibThinning.h  LibAffinage.c  LibAffinage.h  LibKirsh4.c  LibKirsh4.h  LibSeuillage.c  LibSeuillage.h
Tp/EFREI_IRV_VAAS/TP_Mouvement2025/: note.md
Tp/EFREI_IRV_VAAS/TP_Mouvement2025/ImRes/NImCote/: NImCoteRes0001.ppm  NImCoteRes0002.ppm  NImCoteRes0003.ppm  NImCoteRes0004.ppm  NImCoteRes0005.ppm  NImCoteRes0006.ppm  NImCoteRes0007.ppm  NImCoteRes0008.ppm  NImCoteRes0009.ppm  NImCoteRes0010.ppm  NImCoteRes0011.ppm  NImCoteRes0012.ppm  NImCoteRes0013.ppm  NImCoteRes0014.ppm  NImCoteRes0015.ppm  NImCoteRes0016.ppm  NImCoteRes0017.ppm  NImCoteRes0018.ppm  NImCoteRes0019.ppm  NImCoteRes0020.ppm  NImCoteRes0021.ppm  NImCoteRes0022.ppm  NImCoteRes0023.ppm  NImCoteRes0024.ppm  NImCoteRes0025.ppm  NImCoteRes0026.ppm  NImCoteRes0027.ppm  NImCoteRes0028.ppm  NImCoteRes0029.ppm  NImCoteRes0030.ppm  NImCoteRes0031.ppm  NImCoteRes0032.ppm  (+315 more)
Tp/EFREI_IRV_VAAS/TP_Mouvement2025/src/: Compile.sh  EdGabMotionDetect.c  EdLibGabMotionDetect.c  EdLibGabMotionDetect.h  EdLibMotionDetect.c  EdLibMotionDetect.h  EdLibMotionDetectFond.c  EdLibMotionDetectFond.h  EdMotionDetect.c  EdMotionDetectFond.c  EdUtilities.c
data/: xmltoDict.py
data/results/: 0.json  0.xml  1.json  1.xml  10.json  10.xml  100.json  100.xml  1000.json  1000.xml  1001.json  1001.xml  1002.json  1002.xml  1003.json  1003.xml  1004.json  1004.xml  1005.json  1005.xml
include/: image_processing.hpp  utils.hpp
models/: model_training.py
projet/ADESFA/: TestFreqTimerUnix.c  Timer.c
projet/CauCpp/: TestString.c
src/: Main.cpp  image_processing.cpp  image_processing.hpp  lego_detection.cpp  lego_detection.hpp  main2.cpp  utils.cpp  utils.hpp
(+347 files in other folders)
